--- a/pki/pki.properties
+++ b/pki/pki.properties
@@ -5,13 +5,13 @@ INTDIR='OpenSSL/ca/intermediate'
 SUBJECT='/C=US/ST=NJ/L=Ridgefield/O=Molpis'
 DAYS='365'
 ROOTCA='RootCA'
-ROOTCAPW='P@ssw0rd1!'
+ROOTCAPW='Password1'
 
 INTCA='authority.molpis.com'
-INTCAPW='P@ssw0rd2!'
+INTCAPW='Password2'
 CACHAIN='ca-chain-cert'
 
 SERVERS=('openam.molpis.com' 'opendj.molpis.com')
 USERS=('rbahian_tst1' 'rbahian_tst2' 'rbahian_tst3')
-PASSWORD='Password1!'
+PASSWORD='Password3'
 
