--- a/pki/pki.properties
+++ b/pki/pki.properties
@@ -1,13 +1,13 @@
 JAVAHOME='/usr/bin'
 ROOTDIR='OpenSSL/ca'
-INTDIR='OpenSSL/ca/intermediate'
+#INTDIR='OpenSSL/ca/intermediate'
 
 SUBJECT='/C=US/ST=NJ/L=Ridgefield/O=Molpis'
 DAYS='365'
 ROOTCA='RootCA'
 ROOTCAPW='Password1'
 
-INTCA='authority.molpis.com'
+INTCAS=('authority.molpis.com' 'test.molpis.com')
 INTCAPW='Password2'
 CACHAIN='ca-chain-cert'
 
